# TTrainMethods

./: .gitignore  README.md  cache_val_N4000_p32768_s400_sig0.005_ref0.15_seed43.npz  fmpe_step1_sanity_check.ipynb  fmpe_step2_heston_2d.ipynb  fmpe_step3_heston_5d.ipynb  heston_core.py  pyproject.toml
PyTorchOrigTut/: tensors.ipynb  tensors.py
TTrainMethods/: checkers_flow_match.ipynb  checkers_flow_match_4x4_tuned.ipynb  heston_fm_dataset.npz  heston_numerical.ipynb
TTrainMethods/outputs/checkers/: checkers_evaluation_results.pt
TTrainMethods/outputs/comparisons/: fm_ot_vs_fm_diff_8_gaussians.pt
TTrainMethods/outputs/fm_ot/: formal_evaluation_results.pt  initial_sampling_results.pt
experiments/: 01_function_approximation.py  03_01_flow_matching_checkerboard.py  03_02_conditional_path_verification.py  03_03_flow_matching_training.py
